--- a/src/app/modules/inventario/consultar-inventario/consultar-inventario.component.html
+++ b/src/app/modules/inventario/consultar-inventario/consultar-inventario.component.html
@@ -74,7 +74,7 @@
             </ng-container>
 
             <ng-container matColumnDef="producto">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>PRODUCTO</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
               <mat-cell *matCellDef="let detalleProducto" data-label="Producto">{{ detalleProducto.producto.nombre }}</mat-cell>
             </ng-container>
 
