--- a/src/app/modules/clientes/consultar-cuentas-corrientes/consultar-cuentas-corrientes.component.html
+++ b/src/app/modules/clientes/consultar-cuentas-corrientes/consultar-cuentas-corrientes.component.html
@@ -21,7 +21,7 @@
 
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Desde Saldo</mat-label>
+            <mat-label>Saldo Desde</mat-label>
             <input type="text" matInput [formControl]="txDesdeMonto" mask="separator.2" prefix="$" thousandSeparator=","/>
           </mat-form-field>
           <app-error-messages [control]="txDesdeMonto"></app-error-messages>
