--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -85,7 +85,7 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card [hidden]="ventas.length === 0 && isLoading">
+  <mat-card [hidden]="ventas.length === 0 || isLoading">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
@@ -135,13 +135,13 @@
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verVenta(venta)">
                   <mat-icon class="ver">visibility</mat-icon>
                 </button>
-                <button *ngIf="venta.comprobanteAfip.comprobante_pdf_url != null && venta.anulada == 0" mat-icon-button color="primary" matTooltip="Anular venta" (click)="anularVenta(venta)">
+                <button *ngIf="venta.anulada == 0" mat-icon-button color="primary" matTooltip="Anular venta" (click)="anularVenta(venta)">
                   <mat-icon class="eliminar">settings_backup_restore</mat-icon>
                 </button>
                 <button *ngIf="venta.comprobanteAfip.comprobante_pdf_url != null" mat-icon-button color="primary"  matTooltip="Imprimir comprobante" (click)="imprimirComprobante(venta)">
                   <mat-icon class="imprimir">print</mat-icon>
                 </button>
-                <button *ngIf="venta.comprobanteAfip.comprobante_pdf_url == null" mat-icon-button color="primary"  matTooltip="Facturar venta" (click)="facturarVenta(venta)">
+                <button *ngIf="venta.comprobanteAfip.comprobante_pdf_url == null && venta.anulada == 0" mat-icon-button color="primary"  matTooltip="Facturar venta" (click)="facturarVenta(venta)">
                   <mat-icon class="facturar">attach_money</mat-icon>
                 </button>
               </mat-cell>
