--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -191,7 +191,7 @@
           <div class="col-9">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Cliente</mat-label>
-              <mat-select [formControl]="txCliente">
+              <mat-select [formControl]="txCliente" (selectionChange)="cambioCliente($event.value)">
                 <mat-option *ngFor="let cliente of this.clientes" [value]="cliente.id">
                   {{ cliente.nombre + ' ' + cliente.apellido }}
                 </mat-option>
