feat: avances detalle arqueo

--- a/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.html
+++ b/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.html
@@ -74,7 +74,7 @@
 
             <!-- Hora de apertura -->
             <ng-container matColumnDef="horaApertura">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>HORA DE APERTURA</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>HORA APERTURA</mat-header-cell>
               <mat-cell *matCellDef="let arqueo">
                 {{ arqueo.horaApertura }}
               </mat-cell>
@@ -82,7 +82,7 @@
 
             <!-- Hora de cierre -->
             <ng-container matColumnDef="horaCierre">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>HORA DE CIERRE</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>HORA CIERRE</mat-header-cell>
               <mat-cell *matCellDef="let arqueo">
                 {{ arqueo.horaCierre }}
               </mat-cell>
