--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,1 +1,39 @@
-<p>home works!</p>
+<div class="container py-3">
+  <div class="row">
+
+    <div class="col-3">
+      <mat-card>
+        <div class="col p-4">
+          <div class="row">
+            <h2>Ventas de hoy</h2>
+          </div>
+          <div class="col d-flex justify-content-center">
+            <p style="font-weight: bold; font-size: 19px">$</p>
+            <h1>4930,20</h1>
+          </div>
+
+          <div class="col d-flex justify-content-center">
+            <img src="assets/imgs/up.png">
+            <p class="mayorAlDiaAnterior" > 3 + que ayer</p>
+            <p *ngif="false"> 3 + que ayer</p>
+          </div>
+        </div>
+      </mat-card>
+    </div>
+
+
+    <div class="col-6">
+      <mat-card>.</mat-card>
+    </div>
+    <div class="col-3">
+      <mat-card>.</mat-card>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-6">
+
+    </div>
+  </div>
+</div>
+
