fix: mostrar PU real

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -81,7 +81,7 @@
               <!-- Precio del producto -->
               <div class="row align-items-center text-center mb-3">
                 <div class="col">
-                  <strong [ngClass]="!producto.seleccionadoParaVenta ? 'product-price' : 'product-price-seleccionado'" >$ {{producto.precioConIVA | number:'1.2-2':'es-AR' }}</strong>
+                  <strong [ngClass]="!producto.seleccionadoParaVenta ? 'product-price' : 'product-price-seleccionado'" >$ {{(producto.precioConIVA * (producto.promocion.porcentajeDescuento != 0 ? 1 + producto.promocion.porcentajeDescuento/100 : 1)) | number:'1.2-2':'es-AR' }}</strong>
                 </div>
               </div>
             </div>
@@ -212,7 +212,7 @@
             <div class="d-flex justify-content-between align-items-center border-bottom p-3 producto-item">
               <div class="col-4 d-flex flex-column">
                 <span class="m-0"><b>{{ producto.nombre }}</b></span>
-                <span class="text-muted">P/U: $ {{ producto.precioConIVA | number:'1.2-2':'es-AR' }}</span>
+                <span class="text-muted">P/U: $ {{ (producto.precioConIVA * (producto.promocion.porcentajeDescuento != 0 ? 1 + producto.promocion.porcentajeDescuento/100 : 1)) | number:'1.2-2':'es-AR' }}</span>
                 <span class="text-muted" *ngIf="producto.promocion?.id" [matTooltip]="producto.promocion.nombre">Promoción: - {{ producto.promocion.porcentajeDescuento + '%' }}</span>
               </div>
               <div class="d-flex align-items-center col-4 justify-content-center">
