--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -213,7 +213,7 @@
               <div class="col-4 d-flex flex-column">
                 <span class="m-0"><b>{{ producto.nombre }}</b></span>
                 <span class="text-muted">P/U: $ {{ (producto.precioConIVA * (producto.promocion.porcentajeDescuento != 0 ? 1 + producto.promocion.porcentajeDescuento/100 : 1)) | number:'1.2-2':'es-AR' }}</span>
-                <span class="text-muted" *ngIf="producto.promocion?.id" [matTooltip]="producto.promocion.nombre">Promoción: - {{ producto.promocion.porcentajeDescuento + '%' }}</span>
+                <span class="text-muted" *ngIf="(producto.promocion?.id) &&  producto.promocion?.id != -1" [matTooltip]="producto.promocion.nombre">Promoción: - {{ producto.promocion.porcentajeDescuento + '%' }}</span>
               </div>
               <div class="d-flex align-items-center col-4 justify-content-center">
                 <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)">-</button>
