fix: detalles en mensajes

--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -169,7 +169,7 @@
   </mat-card>
 
   <h5 *ngIf="!isLoading && !(this.pedidos.length > 0)" class="alert alert-secondary text-center">
-    No se encuentran pedidos para mostrar, realice una nueva búsqueda.
+    No se encuentran ordenes de compra para mostrar, realice una nueva búsqueda.
   </h5>
 </div>
 
