--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -95,7 +95,7 @@
               </mat-cell>
             </ng-container>
             <ng-container matColumnDef="precioConIVA">
-              <mat-header-cell *matHeaderCellDef>PRECIO DE VENTA</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>PRECIO CON IVA</mat-header-cell>
               <mat-cell *matCellDef="let producto">
                 $ {{ producto.precioConIVA | number:'1.2-2':'es-AR' }}
               </mat-cell>
